--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 }
 
 .menu {
-  background-color: #135589;
+  background-color: #07304e;
   width: 100%;
   overflow: hidden;
   position: fixed;
@@ -62,4 +62,10 @@ h3 {
   margin-left: 3%;
   margin-right: 3%;
   font-size: xx-large
+}
+
+.resources {
+  font-family: verdana;
+  font-style: italic;
+  text-decoration: underline;
 }
